添加分页 导航等功能

--- a/bin/application/Demo.fxml
+++ b/bin/application/Demo.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -25,8 +26,10 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -87,7 +90,7 @@
                                              </font>
                                           </Label>
                                           <Separator orientation="VERTICAL" prefHeight="200.0" />
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="这是文本标签">
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="这是文本">
                                              <HBox.margin>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="8.0" />
                                              </HBox.margin>
@@ -107,7 +110,7 @@
                                                 <Insets right="10.0" />
                                              </HBox.margin>
                                           </TextField>
-                                          <TextField disable="true" text="禁用文本框">
+                                          <TextField disable="true" promptText="禁用文本框">
                                              <HBox.margin>
                                                 <Insets right="10.0" />
                                              </HBox.margin>
@@ -115,7 +118,7 @@
                                                 <Insets />
                                              </opaqueInsets>
                                           </TextField>
-                                          <PasswordField text="99999">
+                                          <PasswordField promptText="press passwd" text="Pansoft">
                                              <HBox.margin>
                                                 <Insets right="10.0" />
                                              </HBox.margin>
@@ -316,19 +319,24 @@
                                                    <tabs>
                                                       <Tab closable="false" text="表格示例">
                                                          <content>
-                                                            <VBox>
+                                                            <Pane>
                                                                <children>
-                                                                  <TableView fx:id="tableview" editable="true" prefHeight="242.0" prefWidth="502.0">
-                                                                    <columns>
-                                                                      <TableColumn fx:id="no" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="行号" />
-                                                                      <TableColumn fx:id="account" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="账号" />
-                                                                        <TableColumn fx:id="name" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="姓名" />
-                                                                        <TableColumn fx:id="partment" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="部门" />
-                                                                        <TableColumn fx:id="job" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortable="false" text="职务" />
-                                                                    </columns>
-                                                                  </TableView>
+                                                                  <Pagination fx:id="fenye" prefHeight="292.0" prefWidth="502.0" />
+                                                                  <VBox>
+                                                                     <children>
+                                                                        <TableView fx:id="tableview" editable="true" prefHeight="242.0" prefWidth="502.0">
+                                                                          <columns>
+                                                                            <TableColumn fx:id="no" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="行号" />
+                                                                            <TableColumn fx:id="account" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="账号" />
+                                                                              <TableColumn fx:id="name" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="姓名" />
+                                                                              <TableColumn fx:id="partment" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortType="DESCENDING" sortable="false" text="部门" />
+                                                                              <TableColumn fx:id="job" maxWidth="200.0" minWidth="60.0" prefWidth="100.0" sortable="false" text="职务" />
+                                                                          </columns>
+                                                                        </TableView>
+                                                                     </children>
+                                                                  </VBox>
                                                                </children>
-                                                            </VBox>
+                                                            </Pane>
                                                          </content>
                                                       </Tab>
                                                    </tabs>
@@ -336,7 +344,6 @@
                                                 <HBox prefHeight="0.0" prefWidth="502.0">
                                                    <children>
                                                       <Button mnemonicParsing="false" onAction="#addTable" text="添加" />
-                                                      <Button mnemonicParsing="false" text="修改" />
                                                       <Button mnemonicParsing="false" onAction="#deleteTable" text="删除" />
                                                    </children>
                                                 </HBox>
@@ -351,6 +358,15 @@
                                        <padding>
                                           <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                                        </padding>
+                                    </HBox>
+                                    <HBox prefHeight="100.0" prefWidth="200.0">
+                                       <children>
+                                          <TreeView fx:id="tree" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="240.0">
+                                             <HBox.margin>
+                                                <Insets bottom="10.0" left="30.0" right="10.0" top="10.0" />
+                                             </HBox.margin>
+                                          </TreeView>
+                                       </children>
                                     </HBox>
                                  </children>
                               </VBox>
